# tic-tac-toe

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ansi_codes.h  bitboard.h  print_board.h  term_draw.h  types.h
lib/: .dummy_file_for_git
src/: main.c  term_draw.c
